--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/zhuyali/cpu_tools#readme",
   "dependencies": {
+    "async": "^2.1.4",
     "co": "^4.6.0"
   }
 }
