--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "cpu_tools",
-  "version": "1.0.0",
-  "description": "cpu_tools",
-  "bin": "./bin/cpu_tools",
+  "name": "os_tools",
+  "version": "1.0.1",
+  "description": "os_tools",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zhuyali/cpu_tools.git"
+    "url": "https://github.com/zhuyali/os_tools.git"
   },
   "keywords": [
-    "cpu_tools"
+    "os_tools"
   ],
   "author": "zhuyali",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/zhuyali/cpu_tools/issues"
+    "url": "https://github.com/zhuyali/os_tools/issues"
   },
-  "homepage": "https://github.com/zhuyali/cpu_tools#readme",
+  "homepage": "https://github.com/zhuyali/os_tools#readme",
   "dependencies": {
     "async": "^2.1.4",
   }
