--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
   "homepage": "https://github.com/zhuyali/os_tools#readme",
   "dependencies": {
     "async": "^2.1.4",
+    "mongoose": "^4.8.5",
+    "path": "^0.12.7"
   }
 }
