--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "address": "^1.0.1",
     "async": "^2.1.4",
+    "detect-port": "^1.1.1",
     "forever-monitor": "^1.7.1",
     "moment": "^2.17.1",
     "mongoose": "^4.8.5",
